'特殊语法项目'

--- a/笔记.md
+++ b/笔记.md
@@ -141,7 +141,51 @@ clazz.getDeclaredFields();//获取全部属性
 clazz.getFields();//获取public属性
 ```
 
+##### 创建对象
 
+```
+clazz.newInstance();//调用无参构造器
+Constructor constructor = clazz.getDeclaredConsturctor(String.class, int.class);
+constructor.newInstance("bala",1);//通过构造器传值调用有参构造器
+```
+
+##### 调用方法
+
+```
+method.invoke(obj,args);
+```
+
+##### 属性赋值
+
+```
+field.set(obj,value);
+
+```
+
+##### 获取泛型信息
+
+```
+Type[] type = method.getGenericParameterTypes()
+```
+
+##### 获取注解信息
+
+```
+class.getAnnotations();
+```
+
+## HashMap
+
+**Hashmap**，允许空值（好理解），允许空键
+
+1. ​	散列表，数组+链表
+2. ​	Hash，任意长度的输入，通过hash算法，变成固定长度的输出。损失数据，但是唯一
+3. ​	不线程安全
+4. ​	外层是node数组，冲突后展开为node链表，1.8引入了红黑树，长度大于8时，桶大于64时，按红黑树存储【解决链化很长的问题】，降到6时，转为链表
+5. ​	Node，HashMap的一个静态内部类，实现了Map.Entry，存了hash，key，value，next
+6. ​    Node池一定是2n长，方便-1后与哈希值能得到确定的位置。便于路由算法的执行
+7. ​    桶初始16，最大2的30次方，默认负载因子0.75
+8. ​    modCount变更次数，结构变更
 
 ## 注解
 
@@ -160,6 +204,10 @@ clazz.getFields();//获取public属性
 ```
 int value() default 0;
 ```
+
+## 泛型
+
+java采用泛型擦除的机制来引入泛型，Java中的泛型仅仅是给编译器javac使用的，确保数据的安全性和免去强制类型转换问题。一旦编译完成，泛型相关数据全部擦除
 
 ## JVM
 
@@ -221,7 +269,88 @@ int value() default 0;
 
 保证类加载按顺序进行，不会有人能篡改底层类加载器数据
 
+# docker
+
+项目带环境一起打包
+
+核心思想，隔离
+
+基于Go
+
 # idea
 
 alt行操作
 
+# Golang
+
+- 语法简洁
+- 开发效率高，自带gc
+- 执行性能好
+
+
+
+go build
+
+go build -o 
+
+go run 像解释型代码一样执行
+
+go install  编译后存到go path bin
+
+
+
+##### 支持交叉编译
+
+##### 基础规则
+
+main包，可执行文件，内部带func main，程序入口
+
+语句只能放到函数里
+
+不需要分号
+
+### 变量
+
+先声明后使用，要保存类型。静态类型语言，声明了，必须使用（非全局变量，旧版本）
+
+```
+var s1 string
+var (
+	i int
+	isOk bool
+)
+```
+
+#### 变量类型
+
+##### 简单变量类型
+
+- 整形int
+
+- 浮点型float
+
+- 布尔类型bool
+
+- 字符串string
+
+  ##### 其余变量类型
+
+  数组array
+
+  切片slice
+
+  映射map
+
+  ##### 结构体
+
+  struct
+
+  ##### 接口
+
+  interface
+
+  ##### 指针
+
+  
+
+  
