--- a/游戏/上古卷轴.md
+++ b/游戏/上古卷轴.md
@@ -52,14 +52,15 @@
     - 冥火动作包
       - 其中一部分
     - 启示录魔法
-    - 烽火大修
+    - 烽火大修new
+    - SCSI龙魂系统扩展new
 
 - ##### 装备拓展
 
   - nini护甲
   - 自选清凉化
 
-
+## 尝试下烽火整合
 
 
 
